app/src/main/java/com/example/negativeion/IMovingChart.java
package com.example.negativeion;

public interface IMovingChart {
    void MovingPoint();
}
